name:       dbro
version:    0.1
license:    PublicDomain
author:     (write your names here)

stability:  Experimental
category:   Databases
build-type: Simple
synopsis:   Useless relational database in Haskell.

cabal-version: >= 1.8

Flag debug
    Description: Compile with debug output.
    Default:     False

executable dbro
  hs-source-dirs: bin
  ghc-options:    -Wall -fwarn-unused-imports -fno-warn-orphans

  if flag(debug)
    cpp-options:   -DDEBUG
    build-depends: attoparsec-parsec == 0.0.*,
                   parsec == 3.1.3.*

  main-is:        Main.hs

  build-depends:  base,
                  attoparsec == 0.10.2.*,
                  text == 0.11.2.*,
                  dbro

library
  hs-source-dirs: src
  ghc-options:    -Wall -fwarn-unused-imports -fno-warn-orphans

  if flag(debug)
    cpp-options:   -DDEBUG
    build-depends: attoparsec-parsec == 0.0.*,
                   parsec == 3.1.3.*

  exposed-modules:
    Data.Bro.Types
    Data.Bro.SQL.Parser

  build-depends:  base,
                  attoparsec == 0.10.2.*,
                  text == 0.11.2.*
