name:       dbro
version:    0.1
license:    PublicDomain
author:     (write your names here)

stability:  Experimental
category:   Databases
build-type: Simple
synopsis:   Useless relational database in Haskell.

cabal-version: >= 1.8

Flag debug
    Description: Compile with debug output.
    Default:     False

executable dbro
  hs-source-dirs: bin
  ghc-options:    -Wall -fwarn-unused-imports -fno-warn-orphans

  main-is:        Main.hs

  build-depends:    base
                  , attoparsec == 0.10.2.*
                  , bytestring == 0.10.*
                  , mtl == 2.1.*
                  , dbro

library
  hs-source-dirs: src
  ghc-options:    -Wall -fwarn-unused-imports -fno-warn-orphans

  if flag(debug)
    cpp-options: -DDEBUG

  exposed-modules:
    Data.Bro.Backend
    Data.Bro.Backend.Class
    Data.Bro.Backend.Disk
    Data.Bro.Backend.Error
    Data.Bro.Backend.Memory
    Data.Bro.Backend.Result
    Data.Bro.Monad
    Data.Bro.Types
    Data.Bro.Parser

  build-depends:    base
                  , ghc == 7.6.*
                  , attoparsec == 0.10.2.*
                  , bytestring == 0.10.*
                  , containers == 0.5.*
                  , mtl == 2.1.*
                  , binary == 0.5.*
                  , directory == 1.2.*

test-suite dbro-tests
  hs-source-dirs: tests
  ghc-options:    -Wall -fwarn-unused-imports -fno-warn-orphans

  type:           exitcode-stdio-1.0
  main-is:        Tests.hs

  build-depends:    base
                  , attoparsec == 0.10.2.*
                  , text == 0.11.2.*
                  , text-format == 0.3.*
                  , test-framework             == 0.6.*
                  , test-framework-quickcheck2 == 0.2.*
                  , test-framework-hunit       == 0.2.*
                  , HUnit                      == 1.2.*
                  , QuickCheck                 == 2.4.*
                  , quickcheck-instances       == 0.3.*
                  , dbro
